--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                       </div>
                     </div>
-                    <div class="card bg-primary text-white text-center p-3">
+                    <div class="card bg-primary text-white text-center p-2">
                       <blockquote class="blockquote mb-0">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
                         <footer class="blockquote-footer text-white">
@@ -147,7 +147,7 @@
                     </div>
                     <div class="col mb-4">
                       <div class="card">
-                        <img src="img/godess-nut-1.jpg" class="card-img-top" alt="...">
+                        <img src="img/tahuti.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -156,7 +156,7 @@
                     </div>
                     <div class="col mb-4">
                       <div class="card">
-                        <img src="img/tahuti.jpeg" class="card-img-top" alt="...">
+                        <img src="img/godess-nut-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -205,6 +205,21 @@
               </div>
             </div>
           </div> 
+          <footer>
+            <div class="container" style="padding: 35px;">
+                <div class="row">
+                  <div class="col-sm">
+                    <button type="button" class="btn btn-primary btn-sm">Contact</button>
+                  </div>
+                  <div class="col-sm">
+                    <button type="button" class="btn btn-primary btn-sm">Follow Us</button>
+                  </div>
+                  <div class="col-sm">
+                    <button type="button" class="btn btn-primary btn-sm">Book List</button>
+                  </div>
+                </div>
+              </div>
+          </footer>
           <!--Start of Last Div-->
       </div>
 
